--- a/Bachelorarbeit/nachbildung.tex
+++ b/Bachelorarbeit/nachbildung.tex
@@ -3,10 +3,10 @@
 Mithilfe des Videos \cite{Anderson.2018} und den in der Beschreibung gemachten Angaben, soll der Flug eines Quadrocopters auf \SI{10,2}{km} Höhe im erstellten Tool nachgebildet werden. Es soll dabei die Validität des Modells und die Glaubwürdigkeit des Fluges an sich überprüft werden. 
 \section{Komponenten des Quadrocopters}
 \label{sec:komponenten}
-% Der verwendete Motor war ein Cobra C2206/ 30 1400KV.
+% 
 Im Folgenden sind alle technischen Daten, die im Programm eingebracht wurden aufgelistet. Diese sind aus dem Video und den Beschreibungen zu dem Quadrocopter entnommen worden. Fehlende Daten wurden geschätzt oder sind beim Piloten nachgefragt worden.
 \subsubsection{Motor}
-Die technischen Spezifikation des Motors sind in Tab.\ref{tab:mot_cobra_parameter} aufgelistet. Es wurden kleine, sehr schnell drehende Brushless DC Motoren verwendet in Bezug auf den \ensuremath{K_V}-Wert und das Motorgewicht.
+Der verwendete Motor war ein Cobra C2206/ 30 1400KV. Die technischen Spezifikation des Motors sind in Tab.\ref{tab:mot_cobra_parameter} aufgelistet. Es wurden kleine, sehr schnell drehende Brushless DC Motoren verwendet in Bezug auf den \ensuremath{K_V}-Wert und das Motorgewicht.
 \begin{center}
 	\captionof{table}{Motorparameter}
 	\begin{tabular}{l l l} \hline
@@ -21,8 +21,7 @@ Die technischen Spezifikation des Motors sind in Tab.\ref{tab:mot_cobra_paramete
 \end{center}
 
 \subsubsection{Propeller}
-%Als Propeller wurden 4 Gemfan7038-Propeller eingesetzt. Das sind Propeller mit einem Durchmesser von \SI{7}{in} und einem Pitch von \SI{3,8}{in}. 
-Die Abmaße des Propellers betragen \SI{7}{in} im Durchmesser mit einem Pitch von \SI{3,8}{in}. Für diesen Propeller wurde in der Leistungsberechnung ein äquivalenter Propeller aus der APC Datenbank mit den gleichen Abmessungen verwendet.
+Als Propeller wurden 4 Gemfan7038-Propeller eingesetzt. Das sind Propeller mit einem Durchmesser von \SI{7}{in} und einem Pitch von \SI{3,8}{in}. Für diesen Propeller wurde in der Leistungsberechnung ein äquivalenter Propeller aus der APC Datenbank mit den gleichen Abmessungen verwendet.
 
 \subsubsection{Batterie}
 Die Batterie ist eine selbst gebaute LiIon Batterie in der Bauform 4s3p. Das Gewicht einer Zelle beträgt ca. \SI{46}{g}. Mit dieser Angabe, kann das Gesamtgewicht der Batterie sehr gut abgeschätzt werden. Die nominale und die minimale Spannung pro Batteriezelle konnten aus den zusätzlichen Angaben berechnet werden. So betrug die Spannung der Batterie zu Beginn des Fluges ca. \SI{15,6}{V} und am Ende ca. \SI{11,5}{V}. Hierbei ergibt sich die nominale Spannung für eine 4-Zellen-Batterie zu \SI{3,9}{V} und eine minimale Spannung einer Zelle zu \SI{2.875}{V}. Alle weiteren notwendigen Spezifikationen sind in Tab.\ref{tab:bat_4s3p_parameter} festgehalten.
@@ -70,22 +69,31 @@ Weitere Startbedingungen und Missionsparameter sind in Tab.\ref{tab:umgebungs_mi
 
 \section{Ergebnisse}
 \label{sec:ergebnisse_quadrocopter}
-Im Nachfolgenden sind die Ergebnisse des Programms in Graphen dargestellt. Aus allen Diagrammen ist zu entnehmen, dass der Quadrocopter eine Höhe von mehr als \SI{14000}{m} erreichen kann. Das ist mehr als \SI{4000}{m} höher als die Höhe, die der Quadrocopter im Video erreicht.
+
+\begin{itemize}
+	\item \textcolor{red}{neue Bilder einfügen und Beschreibung entsprechend anpassen}
+\end{itemize}
+
+
+
+
+
+Im Nachfolgenden sind die Ergebnisse des Programms in Graphen dargestellt. Aus allen Diagrammen ist zu entnehmen, dass der Quadrocopter eine Höhe von mehr als \SI{13000}{m} erreichen kann. Das ist mehr als \SI{3000}{m} höher als die Höhe, die der Quadrocopter im Video erreicht.
 Die Restladung der Batterie nimmt mit der Höhe linear ab (Vgl. Abb.\ref{pic:restladung_russland}).  
 \begin{center}
 	\includegraphics[scale=0.3]{Diagramme/C_Rest_V.jpg}
 	\label{pic:restladung_russland}
 	\captionof{figure}{Restladung der Batterie über der Höhe}
 \end{center}
-Diese erweist sich auch als begrenzender Faktor für die maximale Flughöhe, da ab der maximalen Flughöhe die Batterierestladung Null wird. Im Video ist weiterhin die verbrauchte Kapazität in \SI{}{mAh} gegeben. Mit dieser und der Gesamtkapazität von aller Zellen kann daraus geschlossen werden, dass der Quadrocopter noch eine Restladung von etwas weniger als \SI{29}{\%} unter idealen Bedingungen am Top Of Climb (TOC) hat. Dieses stimmt beim Ablesen der Restkapazität in \SI{}{\%} bei \SI{10260}{m} aus dem Diagramm annähernd überein. Die berechnete liegt um ein paar Prozentpunkte über realen.
-Hiergegen nimmt die Motordrehzahl und damit auch die Propellerdrehzahl leicht quadratisch zu und erreicht am TOC fast \SI{17000}{U/min} (Vgl. Abb.\ref{pic:omega_russland}).  
+Diese erweist sich jedoch nicht als begrenzender Faktor, da selbst in \SI{13000}{m} Höhe immer noch ca. \SI{3}{\%} Restladung vorhanden sind. Im Video ist weiterhin die verbrauchte Kapazität in \SI{}{mAh} gegeben. Mit dieser und der Gesamtkapazität von aller Zellen kann daraus geschlossen werden, dass der Quadrocopter noch eine Restladung von etwas weniger als \SI{28}{\%} unter idealen Bedingungen am Top Of Climb (TOC) hat. Dieses stimmt beim Ablesen der Restkapazität in \SI{}{\%} bei \SI{10260}{m} aus dem Diagramm annähernd überein. Die berechnete liegt ziemlich genau bei der realen.
+Hiergegen nimmt die Motordrehzahl und damit auch die Propellerdrehzahl leicht quadratisch zu und erreicht am TOC \SI{17000}{U/min} (Vgl. Abb.\ref{pic:omega_russland}).  
 \begin{center}
 	\includegraphics[scale=0.3]{Diagramme/omega.jpg}
 	\label{pic:omega_russland}
 	\captionof{figure}{Motordrehzahl der Batterie über der Höhe}
 \end{center}
-Dies entspricht auch der maximalen Drehzahl des APC-Kennfeldes. Trotz der hohen Propellerdrehzahl erreicht die Blattspitzengeschwindigkeit \ensuremath{M_{tip}} mit \textcolor{red}{\SI{0.0001}{Ma}} keine Ma = 1. Bemerkenswerterweise erreichen die Restladung und die Propeller-/Motordrehzahl simultan die vorher festgelegten Grenzen. \\
-Der aus der Batterie entnommene Strom \ensuremath{I_Bat} bleibt innerhalb von \SI{22}{A} und \SI{25}{A} relativ konstant. 
+Dies entspricht auch der maximalen Drehzahl des APC-Kennfeldes. Die Berechnung wird abgebrochen, weil das Kennfeld für Drehzahlen von über \SI{17000}{U/min} keine Daten mehr liefert. Es ist daher zu vermuten, dass letztendlich die Restkapazität den limitierenden Faktor für größere Höhen  darstellt. Trotz der hohen Propellerdrehzahl erreicht die Blattspitzengeschwindigkeit \ensuremath{M_{tip}} mit \SI{0.6}{Ma} keine Ma = 1. Bemerkenswerterweise erreichen die Restladung und die Propeller-/Motordrehzahl simultan die vorher festgelegten Grenzen. \\
+Der aus der Batterie entnommene Strom \ensuremath{I_Bat} bleibt innerhalb von \SI{22}{A} und \SI{25}{A} für den im Video erreichten Höhenbereich relativ konstant. 
 \begin{center}
 	\includegraphics[scale=0.3]{Diagramme/I_Bat.jpg}
 	\label{pic:batteriestrom_russland}
@@ -103,28 +111,16 @@ Der Vergleich mit dem realen Quadrocopterflug zeigt deutlich, dass die errechnet
 
 \section{Diskussion}
 \label{sec:nachbildung_diskussion}
-Zusammengenommen wird der Quadrocopterflug in Russland sehr gut in dem Programm wiedergegeben. Die Flugghöhe ist um \SI{4000}{m} höher als die tatsächlich geflogene, jedoch wird in dem Programm die Batterie komplett entladen. Nichtsdestotrotz gibt es auch Abweichung.\\
+
+\begin{itemize}
+	\item \textcolor{red}{Berechnung PWM ist nicht ganz akkurat. Im Prinzip fehlt eventuell Einfluss anderer Verbraucher treibt PWM hoch, da PWM das Verhältnis der Motorspannungen zur nominalen bzw. aktuellen Spannung ist. zusätzliche Verbraucher treiben den Zähler hoch }
+\end{itemize}
+
+Zusammengenommen wird der Quadrocopterflug in Russland sehr gut in dem Programm wiedergegeben. Die Flugghöhe ist um \SI{3000}{m} höher als die tatsächlich geflogene, jedoch wird in dem Programm die Batterie komplett entladen. Nichtsdestotrotz gibt es auch Abweichung.\\
 Die verbleibende Kapazität im TOC im Programm ist um ein bis drei Prozent höher als im TOC in Russland. Dies lässt sich unter anderem auf die Vernachlässigung des Stromverbrauches zusätzlicher Geräte wie den Motorregler, die Kamera, den Empfänger etc. zurückführen. Außerdem werden dynamische Effekte (Vgl Kap.\ref{sec:vernachlaessigungen_vereinfachungen}) zum Ausgleich von Störungen verursacht durch Böen vernachlässigt. Diese sind in \cite{Anderson.2018} deutlich zu sehen. Generell wurden die Umgebungsbedingungen, was vor allem die Windgeschwindigkeit und die Atmosphäre betrifft, vereinfacht. Die Windgeschwindigkeit ist in der Nachbildung auf konstante \SI{10}{m/s} gesetzt worden. Auch wurde eine Standardatmosphäre vorausgesetzt wohingegen die reale Atmosphäre abweichen kann. Aus dem Video lässt sich jedoch entnehmen, dass relative Windstille am Flugtag herrschte und lediglich vereinzelte Böen in größeren Höhen in Erscheinung traten. Der Einfluss dieser kann trotzdem als gering eingestuft werden, gerade da die Standardatmosphäre und die konstante Windgeschwindigkeit eine gute Näherung liefern. \\
-Weiterhin ist anzumerken, dass Koriakin mit deutlich abweichenden Steiggeschwindigkeit zu \SI{10}{m/s} aufgestiegen ist. In Programm wurde der Endzustand erreicht, wenn \SI{10}{m/s} nicht mehr fliegbar sind. Dabei werden geringere, eventuell noch fliegbare Geschwindigkeiten außer Acht gelassen. Eine kontinuierliche Verringerung der Geschwindigkeit auf \SI{0}{m/s} fand deshalb nicht statt. Unabhängig davon ist die Annahme einer Steiggeschwindigkeit von \SI{10}{m/s} akkurate. Der Steigflug mit dieser Steiggeschwindigkeit auf \SI{10260}{m} dauert \SI{17}{min} und \SI{6}{sec}. Dies ist gerade einmal \SI{11}{sec} kürzer als die tatsächliche Flugzeit von \SI{17}{min} und \SI{17}{sec} zum TOC in \cite{Anderson.2018}.\\
-Die signifikantesten Unterschiede zwischen Realität und Video sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{20}{\%} von der realen ab. Eine Ursache kann in dem Verhalten der Batteriespannung unter Last gefunden werden. In dem verwendeten Batteriemodell wird die nominelle Batteriespannung als konstant angesehen. Dieses berücksichtigt nicht den Spannungseinbruch unter Last oder die Spannung in Abhängigkeit des Entladezustandes. Diese Einflüsse beschreibt \cite{Tremblay.2009} in seinem Batteriemodell. Durch diesen Einfluss ist die tatsächliche Spannung geringer als die nominelle. Das könnte erklären, warum die PWM so bedeutend geringer ausfällt als in Wirklichkeit. \\
+Weiterhin ist anzumerken, dass Koriakin mit deutlich abweichenden Steiggeschwindigkeit zu \SI{10}{m/s} aufgestiegen ist. In Programm wurde der Endzustand erreicht, wenn \SI{10}{m/s} nicht mehr fliegbar sind. Dabei werden geringere, eventuell noch fliegbare Geschwindigkeiten außer Acht gelassen. Eine kontinuierliche Verringerung der Geschwindigkeit auf \SI{0}{m/s} fand deshalb nicht statt. Unabhängig davon ist die Annahme einer Steiggeschwindigkeit von \SI{10}{m/s} akkurat. Der Steigflug mit dieser Steiggeschwindigkeit auf \SI{10260}{m} dauert \SI{17}{min} und \SI{6}{sec}. Dies ist gerade einmal \SI{11}{sec} kürzer als die tatsächliche Flugzeit von \SI{17}{min} und \SI{17}{sec} zum TOC in \cite{Anderson.2018}.\\
+%Die signifikantesten Unterschiede zwischen Realität und Video sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{20}{\%} von der realen ab. Eine Ursache kann in dem Verhalten der Batteriespannung unter Last gefunden werden. In dem verwendeten Batteriemodell wird die nominelle Batteriespannung als konstant angesehen. Dieses berücksichtigt nicht den Spannungseinbruch unter Last oder die Spannung in Abhängigkeit des Entladezustandes. Diese Einflüsse beschreibt \cite{Tremblay.2009} in seinem Batteriemodell. Durch diesen Einfluss ist die tatsächliche Spannung geringer als die nominelle. Das könnte erklären, warum die PWM so bedeutend geringer ausfällt als in Wirklichkeit. \\ 
+Die signifikantesten Unterschiede zwischen Realität und Video sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{15}{\%} von der realen ab. Eine Ursache kann in der Abriegelung gefunden werden. Da zum Ausgleich von Störeinflüssen immer noch eine gewisser Leistungsüberschuss gegeben sein muss, wird die PWM ab einem gewissen Wert nach oben hin abgeriegelt. Dieses Verhalten wird in dem Modell nicht berücksichtigt. \\
 Als weitere Einflfüsse für die Abweichungen können die in Kap. \ref{sec:vernachlaessigungen_vereinfachungen} genannten Vernachlässigungen und Vereinfachungen aufgelistet werden. Ihr Einfluss auf die Gesamtabweichung kann allerdings als gering eingeschätzt werden.
 % Weitere Einflüsse für die Abweichungen sollen an dieser Stelle noch aufgelistet werden. Ihr Einfluss auf die Gesamtabweichung kann allerdings als gering eingeschätzt werden. \\
 %Unter anderem sind sehr einfache Modelle für die Motor, den ESC und die Batterie verwendet worden. Außerdem wurde ein Propeller von APC anstatt des originalen Herstellers verwendet. Durch den anderen Hersteller sind Unterschiede in Profilierung, Verwindung und Profiltiefenverteilung mit zu berücksichtigen. Abweichungen im Kennfeld beeinflussen die darauf aufbauende Berechnung. Dies wurde an dieser Stelle vernachlässigt.
-
-
-
-
-
-%\begin{itemize}
-%	\item Ergebnisse ähnenln denen aus dem Video
-%	\item Flughöhe etwas höher als die im Video gezeigte, allerdings wurde die Batterie auch komplett leergesaugt
-%	\item jedoch gibt es auch Diskrepanzen
-%	\item Kapazität im peak of flight weist im Programm etwa die Hälfte von dem auf, was aus kleinen Berechnungen im Video zu sehen ist, 30\% zu 15\%
-%	\item Grund Betrieb des Quadrocopters außerhalb der zugelassenen Grenzen sein, die vom Programm nicht berechnet werden können v.a. in Bezug auf die Batterie
-%	\item Ungenauigkeit im Batteriemodell, hier ist kein Einbruch der nominellen Spannung unter Last berücksichtigt, wie ihn Tremblay z.B. beschreibt
-%	\item dort spielt auch indirekt der Unterschied der PWM mit ein als Verhältnis der Spannungen. Hier ist das Verhältnis zu hoch
-%	\item Außerdem Verwendung sehr einfache Modelle für Motor, ESC und Batterie. Ungenauigkeiten müssen hier berücksichtigt werden
-%	\item Es wurde ein Propeller von APC anstatt Gemfan verwendet. --> anderer Hersteller. Unterschiede in Profilierung, Verwindung und Profiltiefenverteilung wurden nicht berücksichtigt. Abweichungen im Kennfeld beeinflussen die gesamte anschließende Berechnung
-%	\item Die Steiggeschwindigkeit wurde als konstant angenommen. Der Vergleich zeigt, dass Koriakin mit deutlich abweichenden Steiggeschwindigkeit zu \SI{10}{m/s} aufgestiegen ist. Der Endzustand wurde also erreicht, wenn \SI{10}{m/s} nicht mehr fliegbar sind. Eine kontinuierliche Verringerung der Geschwindigkeit auf \SI{0}{m/s} fand nicht statt. 
-%	\item wie auch in den Anmerkungen oben erwähnt, Temperatureinflüsse und Alterungsprozesse bleiben unberücksichtigt <-- Überprüfung ob diese Behauptung stimmt	
-%\end{itemize}
